Revision history for {{$dist->name}}

{{$NEXT}}

2.101240  2010-05-04 07:46:47 America/New_York
          remove a 5.12 specific hunk of syntax (...) (thanks, BRICAS)

2.101230  2010-05-03 23:42:27 America/New_York
          NextRelease now has a time_zone parameter (thanks, APOCAL)

          add a `dzil listdeps` command based on MARCEL's work (thanks, Robin
            Smidsrød)

          the new `dzil new` does stuff, but is not documented

          add a "user" parameter to FakeRelease (David Golden)

          minor documentation improvements here and there

2.101170  2010-04-27 09:59:11 America/New_York
          fix a bug that broke dists with multiple - in their name

2.101160  2010-04-26 19:51:52 America/New_York
          `dzil new` now does nothing and says so

          dzil commands will not create a zilla object just for logging

          easy bundles will less often create names with @@ in them

2.101151  2010-04-25 23:40:28 America/New_York
          GatherDir and PruneCruft now both have verbose log output

          the App config system has been moved and made non-public; it was
          crazy and awful

          version numbers are not validated by version.pm, not my own dumb
          regex

          `dzil clean` no longer removes backup~ files (sorry, jq)

          TestRelease is better about picking a build location (Christopher J.
          Madsen)

          better BUILD_REQUIRES treatment on ancient installer-side EU:MM
          (David Golden)

2.101150  2010-04-25 11:52:11 America/New_York
          when duplicate files are added, report plugin_names with pkg/line
          add missing version on String::RewritePrefix usage (Andrew Rodland)
          more tweaking to how Chrome works

2.101040  2010-04-14 11:54:45 America/New_York
          added PluginBundle::Easy role (from Christopher J. Madsen)
          changed @Basic and @Classic to use PluginBundle::Easy

2.100991  2010-04-09 22:42:49 America/New_York