@@ -1,6 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          (these changes all thanks to APOCAL)
+          add GenerateFile plugin
+          make PodSyntaxTests require a newer, less-broken Test::Pod
+          sort the keys of args written to Makefile.PL and Build.PL
+          add %n and %t for \n and \t to NextRelease
 
 2.101240  2010-05-04 07:46:47 America/New_York
           remove a 5.12 specific hunk of syntax (...) (thanks, BRICAS)
